Finished integration of Injections' positions in program and database. !! TO DEBUG and TEST !!
Database: ATTENTION: changes made
CirclesDrawable.: troubleshooting and refactories in points' visualization, added LoadCoordinates() method, to convert to internal representation the information of InsulinInjection objects
Picture pages: integrated management of graphics management of points of injections. Refactorings.
enums in Common: added enum ZoneOfPosition that represents which of the 4 images will be used in Injections' recordings.
Datalayer: added code to manage the zone in which a point is set.

--- a/GlucoMan.Maui/BackPicturePage.xaml
+++ b/GlucoMan.Maui/BackPicturePage.xaml
@@ -10,13 +10,18 @@
         <drawable:CirclesDrawable x:Key="cerchioDrawable" />
     </ContentPage.Resources>
     <VerticalStackLayout>
-        <HorizontalStackLayout x:Name="stackEditingOptions" HeightRequest="40">
-            <CheckBox x:Name="EditorCheckBox" HorizontalOptions="End" CheckedChanged="CheckedChanged"/>
-            <Label VerticalTextAlignment="Center" HorizontalTextAlignment="Start">Editing</Label>
-            <CheckBox x:Name="DeleteCheckBox" HorizontalOptions="End"/>
-            <Label VerticalTextAlignment="Center" HorizontalTextAlignment="Start">Delete points</Label>
-            <Button x:Name="btnSave" Text="Save points" Clicked="btnSave_Click" />
-            <Button x:Name="btnClear" Text="Clear" Clicked="btnClear_Click" />
+        <HorizontalStackLayout>
+            <HorizontalStackLayout>
+                <Button x:Name="btnSaveInjection" Text="Save" Clicked="btnSaveInjection_Clicked"/>
+            </HorizontalStackLayout>
+            <HorizontalStackLayout x:Name="stackEditingOptions" HeightRequest="40">
+                <CheckBox x:Name="EditorCheckBox" HorizontalOptions="End" CheckedChanged="CheckedChanged"/>
+                <Label VerticalTextAlignment="Center" HorizontalTextAlignment="Start">Editing</Label>
+                <CheckBox x:Name="DeleteCheckBox" HorizontalOptions="End"/>
+                <Label VerticalTextAlignment="Center" HorizontalTextAlignment="Start">Delete points</Label>
+                <Button x:Name="btnSavePoints" Text="Save points" Clicked="btnSavePoints_Clicked" />
+                <Button x:Name="btnClear" Text="Clear" Clicked="btnClear_Click" />
+            </HorizontalStackLayout>
         </HorizontalStackLayout>
         <Grid>
             <!-- griglia in cui metto un'immagine ed un GraphicsView nella stessa cella 
@@ -28,10 +33,9 @@
                    VerticalOptions="Start"
                    HorizontalOptions="Center">
             </Image>
-            <!-- si definisce un GraphicsView che ha le stesse dimensioni della Image,
-                 che è posizionato sopra di essa (sta nella stessa 
-                 e che è collegato (bound) con i "dati" provenienti dalla risorsa chiamata 
-                 "drawable" (definita prima) -->
+            <!-- A GraphicsView is defined with the same dimensions as the Image,
+                 positioned above it (in the same grid cell),
+                 and bound to the "drawable" resource (defined earlier) for data -->
             <GraphicsView x:Name="cerchiGraphicsView"
                     Drawable="{StaticResource drawable}"
                     HeightRequest="600"
