Made images for injections. Passage to .NET 8. MAUI NOT compiling.
Excluded the rest of Xamarin programs from solution (temporarily NOT from Git repository since it could be useful in the future)
Excluded FoglioGlicemiaTerapia (not longer useful to me)
Excluded XOffice that was used only in FoglioGlicemiaTerapia and is not longer useful
MAUI
    added SimpleRecord Windows, with the code of GlucoseRecords program that was just Xamarin and was withdrawn from solution.
    (still to complete the adaptation to .NAT MAUI)
    made images for bolus injections' positions (front - back and sensors' back of arm.

--- a/GlucoMan.Maui/BackPicturePage.xaml
+++ b/GlucoMan.Maui/BackPicturePage.xaml
@@ -16,7 +16,7 @@
             <!-- griglia in cui metto un'immagine ed un GraphicsView nella stessa cella 
                  (così si sovrappongo. L'immagine sta sotto ed il GraphicsView sopra
                   (così si vedono i cerchi che vengono disegnati)) -->
-            <Image x:Name="Immagine" Source="busto_retro.png" Scale="1"        
+            <Image x:Name="Immagine" Source="Retro.png" Scale="1"        
                    HeightRequest="600"
                    WidthRequest="400"
                    VerticalOptions="Start"
