Manual merge of NoXamarin, MAUI and ChangingColors branches. MAUI doesn't compile.
Erased all files Xamarin programs: DatabaseDiabetesRecords,
Some rename refactorings.

--- a/GlucoMan.Maui/BackPicturePage.xaml
+++ b/GlucoMan.Maui/BackPicturePage.xaml
@@ -4,13 +4,24 @@
              xmlns:drawable="clr-namespace:GlucoMan.Maui"
              x:Class="GlucoMan.Maui.BackPicturePage"
              Title="Back past injections">
-    <!-- fra le risprse della pagina aggiungiamo una risorsa di nome "drawable"
+    <!-- fra le risorse della pagina aggiungiamo una risorsa di nome "drawable"
          di tipo CerchioDrawable, accessibile tramite la chiave "cerchioDrawable" (per il binding) -->
     <ContentPage.Resources>
         <drawable:CirclesDrawable x:Key="cerchioDrawable" />
     </ContentPage.Resources>
     <VerticalStackLayout>
-        <HorizontalStackLayout HeightRequest="40">
+        <HorizontalStackLayout>
+            <HorizontalStackLayout>
+                <Button x:Name="btnSaveInjection" Text="Save" Clicked="btnSaveInjection_Clicked"/>
+            </HorizontalStackLayout>
+            <HorizontalStackLayout x:Name="stackEditingOptions" HeightRequest="40">
+                <CheckBox x:Name="EditorCheckBox" HorizontalOptions="End" CheckedChanged="CheckedChanged"/>
+                <Label VerticalTextAlignment="Center" HorizontalTextAlignment="Start">Editing</Label>
+                <CheckBox x:Name="DeleteCheckBox" HorizontalOptions="End"/>
+                <Label VerticalTextAlignment="Center" HorizontalTextAlignment="Start">Delete points</Label>
+                <Button x:Name="btnSavePoints" Text="Save points" Clicked="btnSavePoints_Clicked" />
+                <Button x:Name="btnClear" Text="Clear" Clicked="btnClear_Click" />
+            </HorizontalStackLayout>
         </HorizontalStackLayout>
         <Grid>
             <!-- griglia in cui metto un'immagine ed un GraphicsView nella stessa cella 
@@ -22,9 +33,9 @@
                    VerticalOptions="Start"
                    HorizontalOptions="Center">
             </Image>
-            <!-- si definisce un GraphicsView che ha le stesse dimensioni della Image 
-                 e che è collegato (bound) con i "dati" provenienti dalla risorsa chiamata 
-                 "drawable" (definita prima) -->
+            <!-- A GraphicsView is defined with the same dimensions as the Image,
+                 positioned above it (in the same grid cell),
+                 and bound to the "drawable" resource (defined earlier) for data -->
             <GraphicsView x:Name="cerchiGraphicsView"
                     Drawable="{StaticResource drawable}"
                     HeightRequest="600"
@@ -32,7 +43,7 @@
                     VerticalOptions="Start"
                     HorizontalOptions="Center">
                 <!-- aggiunge un "riconoscitore di "tap" che lancia un evento quando l'utente 
-                     clicca (col mouse) o "tappa" (col dito) sul GraphicsView. 
+                     "clicca" (col mouse) o "tappa" (col dito) sul GraphicsView. 
                      L'evento forzerà una riscrittura della GraphicsView -->
                 <GraphicsView.GestureRecognizers>
                     <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
