--- a/GlucoMan.Maui/HandsPicturePage.xaml
+++ b/GlucoMan.Maui/HandsPicturePage.xaml
@@ -1,21 +1,51 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:drawable="clr-namespace:GlucoMan.Maui"
              x:Class="GlucoMan.Maui.HandsPicturePage"
              Title="Hand blood sample past positions">
+    <ContentPage.Resources>
+        <drawable:CirclesDrawable x:Key="cerchioDrawable" />
+    </ContentPage.Resources>
     <VerticalStackLayout>
-        <HorizontalStackLayout HeightRequest="40">
+        <HorizontalStackLayout>
+            <HorizontalStackLayout>
+                <Button x:Name="btnSaveInjection" Text="Save" Clicked="btnSaveInjection_Clicked"/>
+            </HorizontalStackLayout>
+            <HorizontalStackLayout x:Name="stackEditingOptions" HeightRequest="40">
+                <CheckBox x:Name="EditorCheckBox" HorizontalOptions="End" CheckedChanged="CheckedChanged"/>
+                <Label VerticalTextAlignment="Center" HorizontalTextAlignment="Start">Editing</Label>
+                <CheckBox x:Name="DeleteCheckBox" HorizontalOptions="End"/>
+                <Label VerticalTextAlignment="Center" HorizontalTextAlignment="Start">Delete points</Label>
+                <Button x:Name="btnSavePoints" Text="Save points" Clicked="btnSavePoints_Clicked" />
+                <Button x:Name="btnClear" Text="Clear" Clicked="btnClear_Click" />
+            </HorizontalStackLayout>
         </HorizontalStackLayout>
-        <Image Source="mano_destra.png" Scale="1"
-               HeightRequest="300"
-               HorizontalOptions="Center">
-        </Image>
-        <Image Source="mano_sinistra.png" Scale="1"
-               HeightRequest="300"
-               HorizontalOptions="Center">
-            <Image.GestureRecognizers>
-                <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" />
-            </Image.GestureRecognizers>
-        </Image>
+        <Grid>
+            <Image Grid.Row="0" Grid.Column="0" Source="mano_destra.png" Scale="1"
+                   HeightRequest="300"
+                   WidthRequest="300"
+                   VerticalOptions="Start"
+                   HorizontalOptions="Center">
+            </Image>
+            <Image Grid.Row="1" Grid.Column="0" Source="mano_sinistra.png" Scale="1"
+                   Margin="0,280"
+                   HeightRequest="300"
+                   WidthRequest="300"
+                   VerticalOptions="Start"
+                   HorizontalOptions="Center">
+            </Image>
+            <GraphicsView Grid.Row="0" Grid.Column="0" 
+                          x:Name="cerchiGraphicsView"
+                    Drawable="{StaticResource drawable}"
+                    HeightRequest="600"
+                    WidthRequest="300"
+                    VerticalOptions="Start"
+                    HorizontalOptions="Center">
+                <GraphicsView.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>
+                </GraphicsView.GestureRecognizers>
+            </GraphicsView>
+        </Grid>
     </VerticalStackLayout>
 </ContentPage>
